@@ -35,18 +35,24 @@ use warnings;
         description => "counter with rate",
         autoflush   => 1,
         input       => [ [qw/ counter beans 5 0.5 /], ],
-        output      => "test.beans:5|c|\@0.500000\n",
+        output      => "test.beans:5|c|\@0.5\n",
     },
     {
         description => "counter (negative) with rate",
         autoflush   => 1,
         input       => [ [qw/ counter beans -25 0.1 /], ],
-        output      => "test.beans:-25|c|\@0.100000\n",
+        output      => "test.beans:-25|c|\@0.1\n",
     },
     {
         description => "increment with rate",
         autoflush   => 1,
         input       => [ [qw/ increment beans .123456 /], ],
+        output      => "test.beans:1|c|\@.123456\n",
+    },
+    {
+        description => "increment with rate",
+        autoflush   => 1,
+        input       => [ [qw/ increment beans /, .123456 ], ],
         output      => "test.beans:1|c|\@0.123456\n",
     },
     {
